--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thanh018/myFirst.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/thanh018/myFirst/issues"
+  },
+  "homepage": "https://github.com/thanh018/myFirst#readme"
 }
