--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular-ui-bootstrap": "^2.2.0",
+    "jquery": "^3.1.1"
+  }
 }
